k8s/fastapi/03-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: lucas-garcia-entrenai-no-borrar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-app
        image: lucas-garcia-entrenai-no-borrar-fastapi:latest
        imagePullPolicy: IfNotPresent # Assumes local image
        ports:
        - containerPort: 8000
